removed the loading animation

--- a/index.html
+++ b/index.html
@@ -245,7 +245,14 @@
                                         <!-- Profile image with gradient border -->
                                         <div class="absolute inset-0 p-1 rounded-full gradient-border">
                                             <div class="overflow-hidden h-full bg-white rounded-full">
-                                                <img src="assets/images/Стефан Трајковски А23081.jpg" alt="Stefan Trajkovski" class="object-cover w-full h-full transition-transform duration-300 hover:scale-110">
+                                                <img 
+                                                    src="assets/images/profile.jpg" 
+                                                    alt="Stefan Trajkovski" 
+                                                    class="object-cover w-full h-full transition-transform duration-300 hover:scale-110"
+                                                    width="320"
+                                                    height="320"
+                                                    fetchpriority="high"
+                                                    loading="eager">
                                             </div>
                                         </div>
                                         <!-- Decorative elements -->
