--- a/projects.html
+++ b/projects.html
@@ -204,7 +204,7 @@
                 <!-- Project Card 1 -->
                 <div class="project-card group relative overflow-hidden rounded-2xl bg-white dark:bg-[#1e1e1e] shadow-lg hover:shadow-xl transition-all duration-300 ease-out hover:-translate-y-2" data-category="ai">
                     <!-- Image Container with Gradient Overlay -->
-                    <div class="overflow-hidden relative h-64 image-loading">
+                    <div class="overflow-hidden relative h-64">
                         <div class="absolute inset-0 z-10 bg-gradient-to-b from-transparent to-black/70"></div>
                         <img src="assets/projects/project1.png" alt="Face Detection System" class="object-cover w-full h-full transition-transform duration-700 ease-out group-hover:scale-110" loading="lazy">
                     </div>
@@ -231,7 +231,7 @@
                 <!-- Project Card 2 -->
                 <div class="project-card group relative overflow-hidden rounded-2xl bg-white dark:bg-[#1e1e1e] shadow-lg hover:shadow-xl transition-all duration-300 ease-out hover:-translate-y-2" data-category="web">
                     <!-- Image Container with Gradient Overlay -->
-                    <div class="overflow-hidden relative h-64 image-loading">
+                    <div class="overflow-hidden relative h-64">
                         <div class="absolute inset-0 z-10 bg-gradient-to-b from-transparent to-black/70"></div>
                         <img src="assets/projects/project2.jpg" alt="E-commerce Platform" class="object-cover w-full h-full transition-transform duration-700 ease-out group-hover:scale-110" loading="lazy">
                     </div>
@@ -258,7 +258,7 @@
                 <!-- Project Card 3 -->
                 <div class="project-card group relative overflow-hidden rounded-2xl bg-white dark:bg-[#1e1e1e] shadow-lg hover:shadow-xl transition-all duration-300 ease-out hover:-translate-y-2" data-category="ai">
                     <!-- Image Container with Gradient Overlay -->
-                    <div class="overflow-hidden relative h-64 image-loading">
+                    <div class="overflow-hidden relative h-64">
                         <div class="absolute inset-0 z-10 bg-gradient-to-b from-transparent to-black/70"></div>
                         <img src="assets/projects/project3.jpg" alt="AI Chat Application" class="object-cover w-full h-full transition-transform duration-700 ease-out group-hover:scale-110" loading="lazy">
                     </div>
@@ -285,7 +285,7 @@
                 <!-- Project Card 4 -->
                 <div class="project-card group relative overflow-hidden rounded-2xl bg-white dark:bg-[#1e1e1e] shadow-lg hover:shadow-xl transition-all duration-300 ease-out hover:-translate-y-2" data-category="mobile">
                     <!-- Image Container with Gradient Overlay -->
-                    <div class="overflow-hidden relative h-64 image-loading">
+                    <div class="overflow-hidden relative h-64">
                         <div class="absolute inset-0 z-10 bg-gradient-to-b from-transparent to-black/70"></div>
                         <img src="assets/projects/project4.jpg" alt="Fitness Tracking App" class="object-cover w-full h-full transition-transform duration-700 ease-out group-hover:scale-110" loading="lazy">
                     </div>
@@ -312,7 +312,7 @@
                 <!-- Project Card 5 -->
                 <div class="project-card group relative overflow-hidden rounded-2xl bg-white dark:bg-[#1e1e1e] shadow-lg hover:shadow-xl transition-all duration-300 ease-out hover:-translate-y-2" data-category="web">
                     <!-- Image Container with Gradient Overlay -->
-                    <div class="overflow-hidden relative h-64 image-loading">
+                    <div class="overflow-hidden relative h-64">
                         <div class="absolute inset-0 z-10 bg-gradient-to-b from-transparent to-black/70"></div>
                         <img src="assets/projects/project5.jpg" alt="Weather Dashboard" class="object-cover w-full h-full transition-transform duration-700 ease-out group-hover:scale-110" loading="lazy">
                     </div>
@@ -339,7 +339,7 @@
                 <!-- Project Card 6 -->
                 <div class="project-card group relative overflow-hidden rounded-2xl bg-white dark:bg-[#1e1e1e] shadow-lg hover:shadow-xl transition-all duration-300 ease-out hover:-translate-y-2" data-category="web">
                     <!-- Image Container with Gradient Overlay -->
-                    <div class="overflow-hidden relative h-64 image-loading">
+                    <div class="overflow-hidden relative h-64">
                         <div class="absolute inset-0 z-10 bg-gradient-to-b from-transparent to-black/70"></div>
                         <img src="assets/projects/project6.jpg" alt="Social Media Dashboard" class="object-cover w-full h-full transition-transform duration-700 ease-out group-hover:scale-110" loading="lazy">
                     </div>
