--- a/services.html
+++ b/services.html
@@ -171,7 +171,7 @@
             <!-- Services Section -->
             <div class="grid grid-cols-1 gap-8 mb-16 md:grid-cols-2 lg:grid-cols-3">
                 <!-- Web Development Card -->
-                <div class="p-8 bg-white dark:bg-[#363636] rounded-xl shadow-lg hover:shadow-2xl transform hover:-translate-y-1 transition-all duration-300 border-t-4 border-teal-600 dark:border-[#3c7f72]">
+                <div class="p-8 bg-[#F8F7F1] dark:bg-[#363636] rounded-xl shadow-lg hover:shadow-2xl transform hover:-translate-y-1 transition-all duration-300 border-t-4 border-teal-600 dark:border-[#3c7f72]">
                     <div class="flex flex-col items-center">
                         <div class="p-4 mb-6 rounded-full bg-gradient-to-br from-[#3c7f72]/20 to-[#3c7f72]/5">
                             <i class="text-4xl text-[#3c7f72] fas fa-code"></i>
@@ -193,7 +193,7 @@
                 </div>
 
                 <!-- Backend Development Card -->
-                <div class="p-8 bg-white dark:bg-[#363636] rounded-xl shadow-lg hover:shadow-2xl transform hover:-translate-y-1 transition-all duration-300 border-t-4 border-teal-600 dark:border-[#992800]">
+                <div class="p-8 bg-[#F8F7F1] dark:bg-[#363636] rounded-xl shadow-lg hover:shadow-2xl transform hover:-translate-y-1 transition-all duration-300 border-t-4 border-teal-600 dark:border-[#992800]">
                     <div class="flex flex-col items-center">
                         <div class="p-4 mb-6 rounded-full bg-gradient-to-br from-[#992800]/20 to-[#992800]/5">
                             <i class="text-4xl text-[#992800] fas fa-server"></i>
@@ -215,7 +215,7 @@
                 </div>
 
                 <!-- Python Development Card -->
-                <div class="p-8 bg-white dark:bg-[#363636] rounded-xl shadow-lg hover:shadow-2xl transform hover:-translate-y-1 transition-all duration-300 border-t-4 border-teal-600 dark:border-[#d34a24]">
+                <div class="p-8 bg-[#F8F7F1] dark:bg-[#363636] rounded-xl shadow-lg hover:shadow-2xl transform hover:-translate-y-1 transition-all duration-300 border-t-4 border-teal-600 dark:border-[#d34a24]">
                     <div class="flex flex-col items-center">
                         <div class="p-4 mb-6 rounded-full bg-gradient-to-br from-[#d34a24]/20 to-[#d34a24]/5">
                             <i class="text-4xl text-[#d34a24] fab fa-python"></i>
@@ -238,7 +238,7 @@
             </div>
 
             <!-- Why Choose Me Section -->
-            <div class="p-12 mb-16 bg-white dark:bg-[#363636] rounded-lg shadow-lg">
+            <div class="p-12 mb-16 bg-[#F8F7F1] dark:bg-[#363636] rounded-lg shadow-lg">
                 <h2 class="mb-12 text-3xl font-bold text-center text-teal-700 dark:text-[#e4e2dd]">Why Choose Me?</h2>
                 <div class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-4">
                     <div class="text-center">
