--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6"/>
                                             </svg>
                                         </a>
-                                        <a href="contact.html" class="inline-flex gap-2 justify-center items-center px-6 py-2 text-teal-600 rounded-full border-2 border-teal-600 transition-all duration-300 dark:text-white dark:border-teal-600 group md:px-8 md:py-3 hover:bg-teal-600 hover:text-white dark:hover:bg-teal-700 mb-8 md:mb-0">
+                                        <a href="contact.html" class="inline-flex gap-2 justify-center items-center px-6 py-2 mb-8 text-teal-600 rounded-full border-2 border-teal-600 transition-all duration-300 dark:text-white dark:border-teal-600 group md:px-8 md:py-3 hover:bg-teal-600 hover:text-white dark:hover:bg-teal-700 md:mb-0">
                                             <span class="text-sm whitespace-nowrap md:text-base">Contact Me</span>
                                             <svg class="w-4 h-4 transition-all duration-300 md:w-5 md:h-5" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
